feat: user send mail

--- a/views/components/footer.ejs
+++ b/views/components/footer.ejs
@@ -48,6 +48,12 @@
 
 </div>
 <footer class=" wow text-down" style="animation-delay: 0.4s;">
+    <div class="footer-line">
+        <!-- <img src="/uploads/foot-line.svg" alt=""> -->
+        <div class="main-bg-box">
+            <div class="home-lottie-icon" data-lottie="line"></div>
+        </div>
+    </div>
     <div class="container">
         <div class="footer-top">
             <a href="/" aria-current="page" class="footer-logo">
@@ -115,11 +121,12 @@
 <script src="/js/gsap.min.js" defer></script>
 <script src="/js/ScrollTrigger.min.js" defer></script>
 <script src="/js/lenis.min.js"></script>
+<script src="/js/lottie_svg.min.js" defer></script>
 <script src="/js/global.js" defer></script>
 <!-- <script src="/js/swiper-bundle.min.js"></script> -->
 <script src="/js/magnet.js" defer></script>
 <script src="/js/wow.min.js"></script>
-<script src="/js/lottie_svg.min.js" defer></script>
+
 
 <script>
     // Get Current Year to Footer
