--- a/views/index.ejs
+++ b/views/index.ejs
@@ -224,8 +224,10 @@
         </div>
 
         <div class="manifesto_description-wrap wow text-down">
-          <img src="/uploads/index-about.svg" alt="">
-
+          <!-- <img src="/uploads/index-about.svg" alt=""> -->
+          <div class="main-bg-box">
+            <div class="home-lottie-icon" data-lottie="abs"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -238,7 +240,7 @@
       <div class="allItems">
         <div class="item wow text-down active" style="animation-delay: 0.4s;">
           <div class="icon">
-            <svg xmlns="http://www.w3.org/2000/svg" width="121" height="125" viewBox="0 0 121 125" fill="none">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 121 125" fill="none">
               <mask id="path-1-inside-1_818_2202" fill="white">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M112 113.001H12V13C12 13 12.0001 13 12.0001 13C67.2286 13 112 57.7715 112 113C112 113 112 113.001 112 113.001Z" />
@@ -268,7 +270,7 @@
         </div>
         <div class="item wow text-down" style="animation-delay: 0.6s;">
           <div class="icon">
-            <svg width="134" height="150" viewBox="0 0 134 150" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg viewBox="0 0 134 150" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M23.4629 116.369L66.4297 19.1065L109.396 116.369H23.4629Z" fill="white" fill-opacity="0.35"
                 stroke="black" />
               <path
