feat: change before build

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -14,9 +14,7 @@
     <div class="present">
       <div class="present-top">
         <div class="present_background"></div>
-        <p class="present_principal  wow text-down" data-text="b1" style="animation-delay: 2.4s;">
-          <%= b1 %>
-        </p>
+        <p class="present_principal  wow text-down" data-text="b1" style="animation-delay: 2.4s;"><%= b1 %> </p>
         <div class="present_img wow text-down" style="animation-delay: 2.6s;">
           <img data-text="b2" src="<%= b2 %>" alt="" />
           <div class="img_grayscale"></div>
