--- a/views/components/meta.ejs
+++ b/views/components/meta.ejs
@@ -1,3 +1,4 @@
 <title><%= head.title && head.title %></title>
 <meta name="keywords" content="<%= head.keywords && head.keywords %>">
 <meta name="description" content="<%= head.description && head.description %>">
+<link rel="icon" href="/uploads/favicon.ico">
