--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
           <p class="text-en" data-text="k2"><%= k2 %>
           </p>
           <h1 data-text="k3"><%= k3 %></h1>
-          <a href="/contact.html" class="btn-click project-consult magnetic" data-strength="25" data-strength-text="15">
+          <a href="/contact" class="btn-click project-consult magnetic" data-strength="25" data-strength-text="15">
             <div class="btn-fill"></div>
             <span class="btn-text">
               <span class="btn-text-inner change3">项目咨询</span>
@@ -99,7 +99,7 @@
             <span data-text="k15"><%= k15 %></span><br />
             <span data-text="k16"><%= k16 %></span></h2>
 
-          <a href="/contact.html" class="btn-click research-dircetion magnetic">
+          <a href="/contact" class="btn-click research-dircetion magnetic">
             <div class="btn-fill"></div>
             <span class="btn-text">
               <span class="btn-text-inner change3">研究方向</span>
