fix: case 引起的报错问题

--- a/views/cases.ejs
+++ b/views/cases.ejs
@@ -153,9 +153,9 @@
                 // })
                 console.log(id)
                 if (id > 0) {
-                    window.location.href = '/cases?type=' + id
+                    window.location.href = '/<%= user.username %>/cases?type=' + id
                 } else {
-                    window.location.href = '/cases'
+                    window.location.href = '/<%= user.username %>/cases'
                 }
             })
         })
