--- a/views/cases.ejs
+++ b/views/cases.ejs
@@ -39,7 +39,7 @@
 
     <%- include('components/header'); -%>
     <main>
-        <div class="banner  wow text-down" style="animation-delay: 2.4s;">
+        <div class="banner wow text-down" style="animation-delay: 2.4s;">
             <div class="container flex flex-align-center">
                 <div class="banner-left">
                     <h1><i data-text="c1"><%= c1 %></i><span data-text="c2"><%= c2 %></span><i
@@ -56,7 +56,7 @@
 
 
         <div class="section1">
-            <div class="chose wow text-down">
+            <div class="chose wow text-down" style="animation-delay: 2.5s;">
                 <% for(var i=0;i<classifys.length;i++){%>
 
                 <div class="item">
@@ -89,7 +89,7 @@
             </div>
         </div>
 
-        <section class="section section2 case">
+        <section class="section section2 case wow text-down" style="animation-delay: 2.4s;">
             <div class="cases container">
                 <% for(var i=0;i<caselist.length;i++){%>
 
