--- a/views/css/service.css
+++ b/views/css/service.css
@@ -351,6 +351,7 @@
 
     .AboutRedesignBx-preserve {
         height: 60vh;
+        left: 22%;
     }
 
     .hover_line .left_text .left_text_block h3 {
@@ -406,7 +407,6 @@
         padding-bottom: 50px;
     }
 
-    .AboutRedesignBx-preserve {}
 
     .CardText {
         top: 71%;
@@ -416,7 +416,7 @@
         position: absolute;
         padding-left: 2rem;
         text-transform: uppercase;
-        left: 128%;
+        left: 111%;
         top: 57%;
         z-index: 1;
     }
@@ -429,19 +429,19 @@
         border-radius: 50%;
         background-color: #ff0000;
         position: absolute;
-        left: -71px;
+        left: -30px;
         z-index: 9;
         top: calc(50% - 4px);
     }
 
     .CardText-num {
-        width: 50px;
+        width: 24px;
         height: 2px;
         display: block;
         background-color: #ff0000;
         position: absolute;
         top: 50%;
-        left: -65%;
+        left: -34%;
         transform: translateY(-50%);
     }
 
@@ -457,7 +457,7 @@
         font-weight: 400;
         white-space: nowrap;
         right: 24px;
-        font-size: 24px;
+        font-size: 16px;
     }
 
 
@@ -482,9 +482,16 @@
         /* left: 100%; */
         /* right: -44%; */
     }
+
+    header {
+        width: 100%;
+        position: fixed !important;
+    }
 }
 
-header {
-    width: 100%;
-    position: fixed !important;
+@media (max-width:480px) {
+    .AboutRedesignBx-preserve {
+        left: 0%;
+    }
+
 }
