--- a/views/css/cases.css
+++ b/views/css/cases.css
@@ -150,7 +150,7 @@
 
 .section2 .cases a .text .des {
     color: #000;
-    font-size: .9vw;
+    font-size: 1.5vw;
     font-weight: 400;
     margin: 20rem 0;
     line-height: 1.6;
@@ -172,7 +172,7 @@
     background: #000;
     color: #fff;
     margin: 0 10px 0 0;
-    line-height: 20px;
+    line-height: 26px;
     font-weight: 400;
 }
 
