--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,8 @@
   <main>
     <div class="banner">
       <div class="container">
-        <div class="banner-text wow text-down" style="animation-delay: 2.4s;">
+        <!-- <div class="banner-text wow text-down" style="animation-delay: 2.4s;"> -->
+          <div class="banner-text wow text-down" >
           <svg width="87" height="8" viewBox="0 0 87 8" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M35.2852 0H0V7.20184H35.2852V0Z" fill="white" />
             <path d="M58.4991 0H44.9482V7.20184H58.4991V0Z" fill="url(#paint0_linear_3760_18423)" />
@@ -48,6 +49,7 @@
           </div>
         </div>
       </div>
+      <div style="height: 100rem;"></div>
     </div>
     <div class="section section1 container">
       <div class="section1-item wow text-down" style="animation-delay: 0.2s;">
